2010-04-27  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Switch to eglib by default.

2010-04-26  Geoff Norton  <gnorton@novell.com>

	* configure.in: Allow cross compiling osx for 64-bit

2010-04-26  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Applied patch from Robert Nagy (robert@openbsd.org). Add
	sys/param.h dependencies to a few checks.

2010-04-25  Mark Probst  <mark.probst@gmail.com>

	* tools/sgen/sgen-grep-binprot.c: Support for major Mark&Sweep
	collector.

2010-04-20  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: Check for the asm/sigcontext.h header.

2010-04-20  Andrés G. Aragoneses  <andres@lindenlab.com>

	* README: Replace --with-profile2 with --with-profile4.

2010-04-20  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: On OpenBSD, remove duplicate -pthread options in 
	  libmono_ldflags.  Change from Robert Nagy <robert@openbsd.org>.

2010-04-20  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: For Linux hosts, remove libmono_ldflags="-lpthread".
	  It's unnecessary (for !target_win32, pthreads are checked again 
	  later in configure.in), and it breaks Android (which doesn't have
	  libpthread, but DOES have pthreads in libc).

2010-04-19  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: Disable AC_CHECK_LIB() for pthread, as this breaks
	  autoconf on BSD platforms.  (Why?  Who knows -- it's AutoConf!)

2010-04-19  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: Use AC_CHECK_LIB() to check for pthread instead of
	  just blindly linking to -lpthread, as Android includes pthread
	  support within libc and doesn't provide a separate libpthread.
	  Android's <string.h> pulls in <malloc.h> (unlike glibc), resulting
	  in a build error in mono/utils/mono-codeman.c due to 
	  `struct mallinfo` re-declaration.  Define HAVE_USR_INCLUDE_MALLOC_H 
	  if /usr/include/malloc.h is present to avoid this.

2010-04-19  Jonathan Pryor  <jpryor@novell.com>
